# raytracer

./: .gitignore  CMakeLists.txt
assets/: colorsphere.lua  hier.lua  nonhier.lua  refraction.lua  room.lua  rotated-cube.lua  sample.lua  simple.lua  singlesphere.lua  test-model.lua  test-uv.lua  test.lua  test_tracer.lua
assets/test-scenes/: bump-mapping.lua
include/: cxxopts.hpp
include/fmt/: format
include/polyroots/: polyroots.hpp
scenes/: bump-mapping.lua  mesh.lua  mirror.lua  refractive.lua  sample.lua  simple-sphere.lua
script/: room.lua  test.lua
src/: .clang-format  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Constants.cpp  Constants.hpp  Cube.cpp  Cube.hpp  Debug.hpp  DebugMaterial.cpp  DebugMaterial.hpp  Geometry.hpp  GeometryIntersection.hpp  GeometryNode.cpp  GeometryNode.hpp  Glm.cpp  Glm.hpp  GlossyMaterial.hpp  Helpers.cpp  Helpers.hpp  Image.cpp  Image.hpp  Intersection.hpp  Light.cpp  Light.hpp  LightRay.hpp  Log.cpp  Log.hpp  Lua.cpp  Lua.hpp  LuaTypes.cpp  LuaTypes.hpp  Material.hpp  Math.cpp  Math.hpp  Medium.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  (+58 more)
src/material/: DebugMaterial.hpp  Material.hpp  PhongMaterial.cpp  PhongMaterial.hpp  ReflectiveMaterial.cpp  ReflectiveMaterial.hpp
src/node/: GeometryNode.cpp  GeometryNode.hpp  Node.cpp  Node.hpp  SphereNode.hpp
src/primitive/: Cube.cpp  Cube.hpp  Mesh.cpp  Mesh.hpp  Primitive.cpp  Primitive.hpp  Sphere.cpp  Sphere.hpp
src/ray/: LightRay.hpp  LightRay.hpp~  Ray.hpp
src/script/: singlesphere.lua  test-model.lua  test.lua
